# StormFuse

./: .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: DESIGN.md  ROADMAP.md
infrastructure/: deploy.sh  download_logs.sh  lambda_function.py  stormfuse-log-upload.yaml
reference/: combine_obs_v1.ps1  combine_obs_v2.ps1
resources/licenses/: FFMPEG-SOURCE.txt
scripts/: release_notes.py
src/stormfuse/: __init__.py  __main__.py  _pylint_layering.py  app.py  config.py  error_handling.py  logging_setup.py  timestamp_parser.py
src/stormfuse/core/: __init__.py  log_uploader.py  update_checker.py
src/stormfuse/ffmpeg/: _subprocess.py  bitrate.py  concat.py  encoders.py  locator.py  probe.py  runner.py  signatures.py
src/stormfuse/jobs/: base.py  combine.py  compress.py  probe.py
src/stormfuse/ui/: about_dialog.py  combine_tab.py  compress_tab.py  error_dialogs.py  log_pane.py  log_submit_dialog.py  main_window.py  menu_actions.py  settings.py  settings_dialog.py  theme.py  update_dialog.py
src/stormfuse/ui/widgets/: file_list.py  size_slider.py
tests/: conftest.py
tests/fixtures/: generate_media.py
tests/functional/: conftest.py  test_jobs_e2e.py  test_logging_e2e.py
tests/unit/: test_app.py  test_bitrate.py  test_combine_tab_probe_reuse.py  test_concat.py  test_encoders.py  test_error_handling.py  test_fetch_ffmpeg.py  test_file_list_render.py  test_file_list_signals.py  test_generate_third_party.py  test_installer_assets.py  test_jobs_base.py  test_jobs_combine.py  test_log_uploader.py  test_logging.py  test_logging_setup.py  test_makefile.py  test_nvenc_timeout.py  test_probe.py  test_pylint_layering.py  test_runner.py  test_settings_dirs.py  test_signatures.py  test_subprocess_helper.py  test_timestamp_parser.py  test_ui_about_dialog.py  test_ui_combine_tab.py  test_ui_compress_tab.py  test_ui_diagnostic_failures.py  test_ui_error_dialogs.py  test_ui_file_list.py  test_ui_log_submit_dialog.py  test_ui_main_window.py  test_ui_settings_dialog.py  test_ui_theme.py  test_ui_update_dialog.py  test_update_checker.py  test_workflows.py
